--- a/ERA5_data_download.ipynb
+++ b/ERA5_data_download.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = \"https://cds.climate.copernicus.eu/api\"\n",
-    "APIKEY = \"197639b8-6352-4023-b51d-523b8f51c48e\"\n",
+    "URL = \""\n",
+    "APIKEY = \""\n",
     "\n",
     "c = cdsapi.Client(url=URL, key=APIKEY)\n"
    ]
